ajustes de tratamentos de erros e atualização do swagger
